--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
       : <%= link_to "Privacy", page_path('privacy') %>
     </p>
     <p>
-      <span class="copyright">&copy; 2025 DVRSLY.com</span> <span class="slogan">Live Life Diversely</span> <span class="builtby">Built by Shannon</span>
+      <span class="copyright">&copy; 2025 DVRSLY.com</span> <span class="slogan">Live Life Diversely</span> <span class="builtby">Built by Shannon</span><span class="poweredby"><a href="https://www.digitalocean.com/?refcode=e263e59bd933&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%203.svg" alt="DigitalOcean Referral Badge" /></a></span>
     </p>
   </div>
 </footer>
