--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>4a93c69 (white favicon, transparent navbar icon, 2025-03-29)
+<h1>Changelog</h1><pre>0bae30d (call ruby instead of needing command line, 2025-03-29)
+4a93c69 (white favicon, transparent navbar icon, 2025-03-29)
 981594d (changelog generator script, 2025-03-29)
 c2e6dc0 (favicon and navbar icon, 2025-03-29)
 3b17d3b (show 500 chars on posts index, 2025-03-29)
