need username to sign up

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -27,7 +27,7 @@
   <li>Follow / subscribe to User</li>
   <li>Receive Notifications on new Posts in Diversion</li>
   <li>Receive Notifications on new Posts and Comments by a User</li>
-  <li>Only a minimum of a username and password is required to sign up!</li>
+  <li>Sign up with an email address, username and password!</li>
   <li>Full vote scores (+/-) like old Reddit.</li>
   <li>User tagging using @, Community tagging using !.</li>
   <li>A post can consist of a title and any combination of self text, a URL, or nothing else.</li>
@@ -50,6 +50,7 @@
   <li>Consistent: votes, comments, and post history should sync across all instances.</li>
   <li>Scalable: it needs strong infrastructure to support large communities.</li>
   <li>User-friendly: with intuitive mobile apps, good moderation tools, and an easy signup process.</li>
+  <li>Logo icons, square, 16, 32, 48, 256, 512</li>
   <li></li>
 </ol>
 
