can only post to your own blog

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,8 +1,7 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features</h2>
 <ol>
-  <li>Delete Blog</li>
-  <li>User Profile</li>
+  <li>User Profile Links</li>
   <li>Download all your data</li>
   <li>User: Delete Account</li>
   <li>Block User</li>
@@ -57,6 +56,7 @@
 
 <h2>Working Features</h2>
 <ol>
+  <li>Delete Blog</li>
   <li>Delete Post</li>
   <li>Delete Comment</li>
   <li>Posts standalone</li>
