can only post to your own blogs

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>6e90a90 (user about update functionality, 2025-03-29)
+<h1>Changelog</h1><pre>09d0d0d (can only post to your own blog, 2025-03-29)
+6e90a90 (user about update functionality, 2025-03-29)
 4acf9c9 (need username to sign up, 2025-03-29)
 e85a215 (poweredby digitaocean link, 2025-03-29)
 0bae30d (call ruby instead of needing command line, 2025-03-29)
