--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -11,9 +11,7 @@
   <li>Block all users except those specifically allowed</li>
   <li>Block all users who post in diversions you have blocked</li>
   <li>Block all posts with keywords that you have blocked</li>
-  <li>incorporate https://takeitdown.ncmec.org</li>
-  <li>Blogs: only posts by a single user</li>
-  <li>Posts in a specific Blog</li>
+  <li>Incorporate https://takeitdown.ncmec.org</li>
   <li>Nested Comments</li>
   <li>Private Messages between Users</li>
   <li>User-defined list of blocked words in Private Messages. Example: a user does not like automobiles so any PM with the word "automobile" or "automobiles" will be blocked.</li>
@@ -43,12 +41,9 @@
   <li>Can ban and unban users from communities and the site.</li>
   <li>Can transfer site and communities to others.</li>
   <li>Can fully erase your data, replacing all posts and comments.</li>
-  <li>NSFW post / community support.</li>
-  <li>Discovery is weak—Reddit suggests new communities based on your interests, while Lemmy lacks seamless cross-community recommendations.</li>
-  <li>Seamless: users shouldn’t need to worry about federation.</li>
-  <li>Consistent: votes, comments, and post history should sync across all instances.</li>
-  <li>Scalable: it needs strong infrastructure to support large communities.</li>
-  <li>User-friendly: with intuitive mobile apps, good moderation tools, and an easy signup process.</li>
+  <li>NSFW post / community support</li>
+  <li>Federation capabilities</li>
+  <li>Federation Consistency: votes, comments, and post history should sync across all instances.</li>
   <li>Logo icons, square, 16, 32, 48, 256, 512</li>
   <li></li>
 </ol>
@@ -56,6 +51,8 @@
 
 <h2>Working Features</h2>
 <ol>
+  <li>Blogs: Can only post to your own blogs</li>
+  <li>Posts in a specific Blog</li>
   <li>Delete Blog</li>
   <li>Delete Post</li>
   <li>Delete Comment</li>
