only delete your own posts; confirm on deletion

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,9 +1,9 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features</h2>
 <ol>
+  <li>User: Delete Account</li>
   <li>User Profile Links</li>
   <li>Download all your data</li>
-  <li>User: Delete Account</li>
   <li>Block User</li>
   <li>Block Diversion</li>
   <li>Can fully erase your data, replacing all posts and comments.</li>
@@ -35,11 +35,10 @@
   <li>i18n / internationalization support.</li>
   <li>Moderation abilities.</li>
   <li>Public Moderation Logs.</li>
-  <li>Can sticky posts to the top of communities.</li>
+  <li>Can pin posts to the top of communities.</li>
   <li>Both site admins, and community moderators, who can appoint other moderators.</li>
   <li>Can lock, remove, and restore posts and comments.</li>
   <li>Can ban and unban users from communities and the site.</li>
-  <li>Can transfer site and communities to others.</li>
   <li>Can fully erase your data, replacing all posts and comments.</li>
   <li>NSFW post / community support</li>
   <li>Federation capabilities</li>
