only allowed to update your own account

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>b9f1865 (can only post to your own blogs, 2025-03-29)
+<h1>Changelog</h1><pre>4294d1c (only delete your own posts; confirm on deletion, 2025-03-30)
+b9f1865 (can only post to your own blogs, 2025-03-29)
 09d0d0d (can only post to your own blog, 2025-03-29)
 6e90a90 (user about update functionality, 2025-03-29)
 4acf9c9 (need username to sign up, 2025-03-29)
