--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,5 +1,5 @@
 <h1>Roadmap</h1>
-<h2>Upcoming Features</h2>
+<h2>Upcoming Features (in approximate order)</h2>
 <ol>
   <li>User: Delete Account</li>
   <li>User Profile Links</li>
@@ -43,13 +43,14 @@
   <li>NSFW post / community support</li>
   <li>Federation capabilities</li>
   <li>Federation Consistency: votes, comments, and post history should sync across all instances.</li>
-  <li>Logo icons, square, 16, 32, 48, 256, 512</li>
+  <li>Logo icons, square, 16, 32, 48, 256</li>
   <li></li>
 </ol>
 
 
 <h2>Working Features</h2>
 <ol>
+  <li>Logo icons, square, 512</li>
   <li>Blogs: Can only post to your own blogs</li>
   <li>Posts in a specific Blog</li>
   <li>Delete Blog</li>
