adding action text

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -3,10 +3,12 @@
 <ol>
   <li>User: Delete Account</li>
   <li>User Profile Links</li>
-  <li>Download all your data</li>
+  <li>Infinite Scrolling</li>
+  <li>Rich Text Editor</li>
   <li>Block User</li>
   <li>Block Diversion</li>
   <li>Can fully erase your data, replacing all posts and comments.</li>
+  <li>Download all your data</li>
   <li>Block offensive usernames</li>
   <li>Block all users except those specifically allowed</li>
   <li>Block all users who post in diversions you have blocked</li>
