--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,6 +21,11 @@
       <%= form.label :body, style: "display: block" %>
       <%= form.textarea :body %>
     </div>
+
+  <div class="field">
+    <%= form.label :content %>
+    <%= form.rich_textarea :content %>
+  </div>
   
     <div>
       <%= form.submit %>
@@ -50,6 +55,12 @@
       <%= form.label :body, style: "display: block" %>
       <%= form.textarea :body %>
     </div>
+
+  <div class="field">
+    <%= form.label :content %>
+    <%= form.rich_textarea :content %>
+  </div>
+  
   
     <div>
       <%= form.submit %>
@@ -78,6 +89,12 @@
       <%= form.label :body, style: "display: block" %>
       <%= form.textarea :body %>
     </div>
+
+  <div class="field">
+    <%= form.label :content %>
+    <%= form.rich_textarea :content %>
+  </div>
+  
   
     <div>
       <%= form.submit %>
