post.body to post.content

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>289d783 (only allowed to update your own account, 2025-03-31)
+<h1>Changelog</h1><pre>6e233c3 (adding action text, 2025-04-02)
+289d783 (only allowed to update your own account, 2025-03-31)
 4294d1c (only delete your own posts; confirm on deletion, 2025-03-30)
 b9f1865 (can only post to your own blogs, 2025-03-29)
 09d0d0d (can only post to your own blog, 2025-03-29)
