--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,9 +11,9 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :body, style: "display: block" %>
-    <%= form.textarea :body %>
+  <div class="field">
+    <%= form.label :content %>
+    <%= form.rich_textarea :content %>
   </div>
 
   <div>
