--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>86ef92a (post.body to post.content, 2025-04-02)
+<h1>Changelog</h1><pre>13ada04 (replacing post.body with post.content, 2025-04-02)
+86ef92a (post.body to post.content, 2025-04-02)
 6e233c3 (adding action text, 2025-04-02)
 289d783 (only allowed to update your own account, 2025-03-31)
 4294d1c (only delete your own posts; confirm on deletion, 2025-03-30)
