--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -4,8 +4,8 @@
   <li>User: Delete Account</li>
   <li>User Profile Links</li>
   <li>Infinite Scrolling</li>
-  <li>Rich Text Editor</li>
   <li>Block User</li>
+  <li>Automatic, scheduled backups</li>
   <li>Block Diversion</li>
   <li>Can fully erase your data, replacing all posts and comments.</li>
   <li>Download all your data</li>
@@ -26,9 +26,9 @@
   <li>Follow / subscribe to User</li>
   <li>Receive Notifications on new Posts in Diversion</li>
   <li>Receive Notifications on new Posts and Comments by a User</li>
-  <li>Sign up with an email address, username and password!</li>
+  <li>Sign up with an email address, username and password</li>
   <li>Full vote scores (+/-) like old Reddit.</li>
-  <li>User tagging using @, Community tagging using !.</li>
+  <li>User tagging using at (@)</li>
   <li>A post can consist of a title and any combination of self text, a URL, or nothing else.</li>
   <li>Notifications, on comment replies and when you're tagged.</li>
   <li>Notifications can be sent via email.</li>
@@ -52,6 +52,8 @@
 
 <h2>Working Features</h2>
 <ol>
+  <li>Manual database backups</li>
+  <li>Rich Text Editor</li>
   <li>Logo icons, square, 512</li>
   <li>Blogs: Can only post to your own blogs</li>
   <li>Posts in a specific Blog</li>
