--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :about, style: "display: block" %>
-    <%= form.textarea :about, placeholder: "Tell us about yourself" %>
+    <%= form.rich_textarea :content, placeholder: "Tell us about yourself" %>
   </div>
 
   <div>
