--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -74,6 +74,8 @@ footer { bottom: 0; margin-top: 50px; }
 .post-content { font-size: 1em; padding-left: 5px; }
 .post-title { font-size: 1.5em; padding-left: 5px; }
 
-.user_link_left { margin-right: 5px; }
-.user_link_middle { margin-left: 5px; margin-right: 5px; }
-.user_link_right { margin-left: 5px; }
+.username { font-size: 2em; }
+.user-about { border: 1px solid black; font-size: 1.5em; }
+.user-link-left { margin-right: 5px; }
+.user-link-middle { margin-left: 5px; margin-right: 5px; }
+.user-link-right { margin-left: 5px; }
