--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,13 @@
-<% content_for :title, "DVRSLY" %>
-<h1><%= @user.username %></h1>
-<div class="user_about"><h2>About</h2><%= sanitize @user.about %></div>
-<div class="user_links">
-<span class="user_link_left"><%= link_to "Blogs", user_blogs_path(@user) %></span>
-<span class="user_link_middle"><%= link_to "Posts", user_posts_path(@user) %></span>
-<span class="user_link_right"><%= link_to "Comments", user_comments_path(@user) %></span>
+<% content_for :title, "u/" + @user.username %>
+<div class="user">
+  <div class="username"><%= @user.username %></div>
+  <div class="user-about">
+    <%= @user.content %>
+    <%= link_to "Edit", edit_user_path(@user) %>
+  </div>
+  <div class="user-links">
+  <span class="user-link-left"><%= link_to "Blogs", user_blogs_path(@user) %></span>
+  <span class="user-link-middle"><%= link_to "Posts", user_posts_path(@user) %></span>
+  <span class="user-link-right"><%= link_to "Comments", user_comments_path(@user) %></span>
+  </div>
 </div>
