--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>e077957 (remove plaintext body field, 2025-04-02)
+<h1>Changelog</h1><pre>5d78887 (table titles; general formatting, 2025-04-02)
+e077957 (remove plaintext body field, 2025-04-02)
 53edfac (change from body to content; link_to for delete; styling, 2025-04-02)
 13ada04 (replacing post.body with post.content, 2025-04-02)
 86ef92a (post.body to post.content, 2025-04-02)
