blog page typo; roadmap additions

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>0a9528f (formatting user about page, 2025-04-02)
+<h1>Changelog</h1><pre>dbccd17 (only show edit for your account, 2025-04-02)
+84341e2 (formatting user about page, 2025-04-02)
+0a9528f (formatting user about page, 2025-04-02)
 5d78887 (table titles; general formatting, 2025-04-02)
 e077957 (remove plaintext body field, 2025-04-02)
 53edfac (change from body to content; link_to for delete; styling, 2025-04-02)
