--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -20,6 +20,7 @@
   <li>Diversion Mods</li>
   <li>User Flair by Community</li>
   <li>User Avatar</li>
+  <li>Blogs: Display post count</li>
   <li>Follow a Blog</li>
   <li>Follow / subscribe to Diversion</li>
   <li>Follow / subscribe to Post</li>
