post-content css class

--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -19,6 +19,7 @@
   <li>User-defined list of blocked words in Private Messages. Example: a user does not like automobiles so any PM with the word "automobile" or "automobiles" will be blocked.</li>
   <li>Diversion Mods</li>
   <li>User Flair by Community</li>
+  <li>Dark Mode</li>
   <li>User Avatar</li>
   <li>Blogs: Display post count</li>
   <li>Follow a Blog</li>
@@ -30,7 +31,6 @@
   <li>Sign up with an email address, username and password</li>
   <li>Full vote scores (+/-) like old Reddit.</li>
   <li>User tagging using at (@)</li>
-  <li>A post can consist of a title and any combination of self text, a URL, or nothing else.</li>
   <li>Notifications, on comment replies and when you're tagged.</li>
   <li>Notifications can be sent via email.</li>
   <li>Private messaging support.</li>
@@ -53,12 +53,14 @@
 
 <h2>Working Features</h2>
 <ol>
+  <li>A post can consist of a title and any combination of self text or a URL.</li>
   <li>Manual database backups</li>
   <li>Rich Text Editor</li>
   <li>Logo icons, square, 512</li>
   <li>Blogs: Can only post to your own blogs</li>
   <li>Posts in a specific Blog</li>
   <li>Delete Blog</li>
+  <li>Delete Diversion (only if there are no posts)</li>
   <li>Delete Post</li>
   <li>Delete Comment</li>
   <li>Posts standalone</li>
