--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>dbccd17 (only show edit for your account, 2025-04-02)
+<h1>Changelog</h1><pre>8659baf (blog page typo; roadmap additions, 2025-04-03)
+dbccd17 (only show edit for your account, 2025-04-02)
 84341e2 (formatting user about page, 2025-04-02)
 0a9528f (formatting user about page, 2025-04-02)
 5d78887 (table titles; general formatting, 2025-04-02)
