--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,8 +1,7 @@
 <div id="<%= dom_id blog %>" class="blog">
   <p><span class="blog-title"><%= link_to "b/" + sanitize(blog.title), blog %></span> <span class="blog-author"><%= link_to "(u/" + blog.user.username + ")" %></span> <% if Current.user.present? %><% if blog.user_id == Current.user.id %><%= link_to "Edit", [:edit, blog] %> <%= button_to "Delete", blog, method: :delete, data: {turbo_confirm: "Confirm Deletion"} %><% end %><% end %></p>
 
-  <p class="blog-description"><%= simple_format(blog.description) %></p>
-
+  <p class="blog-description"><%= blog.description %></p>
 
   <% if @posts.present? %>
     <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
@@ -12,7 +11,7 @@
           <span class="post-title"><%= link_to "p/" + post.title, post %></span>
           <span class="post-author"><%= link_to "u/" + post.user.username, post.user %></span>
         </p>
-        <p class="post-body"><%= post.body %></p>
+        <div class="post-content"><%= post.content %></div>
       </div>
     <% end %>
   <% end %>
