--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>8659baf (blog page typo; roadmap additions, 2025-04-03)
+<h1>Changelog</h1><pre>4992878 (post-content css class, 2025-04-04)
+8659baf (blog page typo; roadmap additions, 2025-04-03)
 dbccd17 (only show edit for your account, 2025-04-02)
 84341e2 (formatting user about page, 2025-04-02)
 0a9528f (formatting user about page, 2025-04-02)
