--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,7 @@
         <span class="post-title"><%= link_to sanitize(post.title), post %></span>
         <span class="post-author"><%= link_to "u/" + post.user.username, post.user %></span>
         <% if post.diversion.present? %><span class="post-diversion"><%= link_to "d/" + post.diversion.title, post.diversion %></span><% end %>
+        <% if post.blog.present? %><span class="post-blog"><%= link_to "b/" + post.blog.title, post.blog %></span><% end %>
       </p>
       <div class="post-content"><%= post.content %></div>
     </div>
