added AGPLv3 license

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,7 @@
       : <%= link_to "Changelog", page_path('changelog')%>
       : <%= link_to "Terms", page_path('terms') %>
       : <%= link_to "Privacy", page_path('privacy') %>
+      : <%= link_to "License", page_path('license') %>
     </p>
     <p>
       <span class="copyright">&copy; 2025 DVRSLY.com</span> <span class="slogan">Live Life Diversely</span> <span class="builtby">Built by Shannon</span>
