--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,10 @@
-<h1>Changelog</h1><pre>4992878 (post-content css class, 2025-04-04)
+<h1>Changelog</h1><pre>3d2a763 (added AGPLv3 license, 2025-04-06)
+569e01d (Create LICENSE, 2025-04-06)
+719fe39 (Merge pull request #3 from smhauck/dependabot/bundler/brakeman-7.0.1, 2025-04-06)
+f6c7608 (formatting; show blog name in post, 2025-04-06)
+f37463d (updated, 2025-04-06)
+cb92ba5 (Bump brakeman from 7.0.0 to 7.0.1, 2025-04-04)
+4992878 (post-content css class, 2025-04-04)
 8659baf (blog page typo; roadmap additions, 2025-04-03)
 dbccd17 (only show edit for your account, 2025-04-02)
 84341e2 (formatting user about page, 2025-04-02)
