--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>3d2a763 (added AGPLv3 license, 2025-04-06)
+<h1>Changelog</h1><pre>062c2b6 (added link to software on github, 2025-04-06)
+0586f62 (updated changelog, 2025-04-06)
+3d2a763 (added AGPLv3 license, 2025-04-06)
 569e01d (Create LICENSE, 2025-04-06)
 719fe39 (Merge pull request #3 from smhauck/dependabot/bundler/brakeman-7.0.1, 2025-04-06)
 f6c7608 (formatting; show blog name in post, 2025-04-06)
