removed auth req. from pages; bug on blog#show

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>062c2b6 (added link to software on github, 2025-04-06)
+<h1>Changelog</h1><pre>e4762a2 (updated gems; fixed title on post#_post, 2025-04-06)
+7a7082c (made repository public and linked to it, 2025-04-06)
+062c2b6 (added link to software on github, 2025-04-06)
 0586f62 (updated changelog, 2025-04-06)
 3d2a763 (added AGPLv3 license, 2025-04-06)
 569e01d (Create LICENSE, 2025-04-06)
