--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,3 +1,3 @@
 <p style="color: green"><%= notice %></p>
-<% if @blog.user_id == Current.user.id %><%= link_to "New Blog Post", new_blog_post_path(@blog) %><% end %>
+<% if Current.user %><% if @blog.user_id == Current.user.id %><%= link_to "New Blog Post", new_blog_post_path(@blog) %><% end %><% end %>
 <%= render @blog %>
