remove non-rich text field

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>bde8c61 (removed auth req. from pages; bug on blog#show, 2025-04-06)
+<h1>Changelog</h1><pre>e006487 (removed old non-rich text field, 2025-04-06)
+0482329 (removed auth req. from pages; bug on blog#show, 2025-04-06)
+bde8c61 (removed auth req. from pages; bug on blog#show, 2025-04-06)
 e4762a2 (updated gems; fixed title on post#_post, 2025-04-06)
 7a7082c (made repository public and linked to it, 2025-04-06)
 062c2b6 (added link to software on github, 2025-04-06)
