--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,9 +1,6 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
-body { font-size: 100%; }
-
-
 
 /* broke */
 .leftsidenav {
@@ -54,8 +51,9 @@ body { font-size: 100%; }
 .comment-author { font-size: 1em; padding-left: 5px; }
 .comment-content { font-size: 1em; padding-left: 5px; }
 
-footer { bottom: 0; margin-top: 50px; }
+nav { background-color: #eee; }
 
+footer { margin-top: 50px; width: 100%; background-color: #eee; }
 .builtby { margin-left: 10px; margin-right: 10px; }
 .poweredby { margin-left: 10px; }
 .copyright { margin-right: 10px; }
