--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <%= link_to (image_tag "dvrsly_logo_black_pink_transparent_512x512.png", alt: "dvrsly logo", width: 48, height: 48, class: "d-inline-block align-text-top"), root_path, class: "navbar-brand" %> 
     <a class="navbar-brand" href="/">DVRSLY</a>
