--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,13 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <%= render 'layouts/navbar' %>
     <div class="container-fluid">
       <%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
       <%= tag.div(flash[:message], style: "color:orange") if flash[:message] %>
       <%= tag.div(flash[:notice], style: "color:green") if flash[:notice] %>
         <%= yield %>
     </div>
-    <%= render 'shared/footer' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
