--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>e006487 (removed old non-rich text field, 2025-04-06)
+<h1>Changelog</h1><pre>d10c24b (no need for separate partials folder; just use layouts; nav/footer bg color, 2025-04-07)
+670fcd6 (remove non-rich text field, 2025-04-07)
+e006487 (removed old non-rich text field, 2025-04-06)
 0482329 (removed auth req. from pages; bug on blog#show, 2025-04-06)
 bde8c61 (removed auth req. from pages; bug on blog#show, 2025-04-06)
 e4762a2 (updated gems; fixed title on post#_post, 2025-04-06)
