--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,6 +1,7 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features (in approximate order)</h2>
 <ol>
+  <li>User signs up on site. Site creates and send confirmation code to user's email. User clicks confirmation link in email. User account is confirmed and allowed to create content on the site.</li>
   <li>User: Delete Account</li>
   <li>User Profile Links</li>
   <li>Infinite Scrolling</li>
