--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,52 +1,53 @@
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <%= link_to (image_tag "dvrsly_logo_black_pink_transparent_512x512.png", alt: "dvrsly logo", width: 48, height: 48, class: "d-inline-block align-text-top"), root_path, class: "navbar-brand" %> 
-    <a class="navbar-brand" href="/">DVRSLY</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blogs</a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "All Blogs", blogs_path, class: "dropdown-item" %></li>
-            <% if Current.user %><li><%= link_to "New Blog", new_blog_path, class: "dropdown-item" %></li><% end %>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Diversions</a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "All Diversions", diversions_path, class: "dropdown-item" %></li>
-            <% if Current.user %><li><%= link_to "New Diversion", new_diversion_path, class: "dropdown-item" %></li><% end %>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Posts</a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "All Posts", posts_path, class: "dropdown-item" %></li>
-            <% if Current.user %><li><%= link_to "New Post", new_post_path, class: "dropdown-item" %></li><% end %>
-          </ul>
-        </li>
-        <% if authenticated? %>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false"><%= Current.user.username %></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", Current.user, class: "nav-link" %></li>
-              <li><%= link_to "Change Password", edit_password_url(Current.user.password_reset_token), class: "nav-link" %></li>
-              <li><%= button_to "Sign Out", session_path, method: :delete, class: "nav-link" %></li>
-            </ul>
-          </li>
-        <% else %> 
-        <li class="nav-item">
-        <li>
-          <%= link_to "Sign In", new_session_path, class: "nav-link" %>
-        </li>
-          <li class="nav-link">Sign Ups Coming Soon!</li>
-          <%# link_to "Sign Up", new_registration_path, class: "nav-link" %>
-        </li>
-        <% end %> 
-      </ul>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <%#= link_to image_tag("engage_logo.svg"), dashboards_index_url, class: "navbar-item" %>
+    <%= link_to "DVRSLY", root_path, class: "navbar-item" %>
+
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">Blogs</a>
+        <div class="navbar-dropdown">
+          <%= link_to "All Blogs", blogs_path, class: "navbar-item" %>
+          <% if Current.user %><%= link_to "New Blog", new_blog_path, class: "navbar-item" %><% end %>
+        </div>
+      </div>
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">Diversions</a>
+        <div class="navbar-dropdown">
+          <%= link_to "All Diversions", diversions_path, class: "navbar-item" %>
+          <% if Current.user %><%= link_to "New Diversion", new_diversion_path, class: "navbar-item" %><% end %>
+        </div>
+      </div>
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">Posts</a>
+        <div class="navbar-dropdown">
+            <%= link_to "All Posts", posts_path, class: "navbar-item" %>
+            <% if Current.user %><%= link_to "New Post", new_post_path, class: "navbar-item" %><% end %>
+        </div>
+      </div>
+      <% if Current.user %>
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">My Account</a>
+        <div class="navbar-dropdown">
+          <%= link_to "Change Password", edit_password_url(Current.user.password_reset_token), class: "navbar-item" %>
+          <%= button_to "Sign Out", session_path, method: :delete, class: "navbar-item" %>
+        </div>
+      </div>
+      <% else %>
+        <%= link_to "Sign In", new_session_path, class: "navbar-item" %>
+        <%# link_to "Sign Up", new_registration_path, class: "navbar-item" %>
+        </div>
+      </div>
+      <% end %>
     </div>
   </div>
 </nav>
