--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,15 @@
   </head>
 
   <body>
+    <div class="container is-fluid">
+    <div class="content">
     <%= render 'layouts/navbar' %>
-    <div class="container-fluid">
       <%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
       <%= tag.div(flash[:message], style: "color:orange") if flash[:message] %>
       <%= tag.div(flash[:notice], style: "color:green") if flash[:notice] %>
         <%= yield %>
-    </div>
     <%= render 'layouts/footer' %>
+    </div>
+    </div>
   </body>
 </html>
