--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,10 +3,10 @@
 <% else %>
   <% content_for :title, "Posts" %>
 <% end %>
-<%= pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 <div id="posts">
   <% @posts.each do |post| %>
-    <div id="<%= dom_id post %>" class="post">
+    <div id="<%= dom_id post %>" class="box">
       <p>
         <span class="post-title"><%= link_to sanitize(post.title), post %></span>
         <span class="post-author"><%= link_to "u/" + post.user.username, post.user %></span>
