--- a/app/views/diversions/_form.html.erb
+++ b/app/views/diversions/_form.html.erb
@@ -11,17 +11,23 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :title, style: "display: block", autofocus: true %>
-    <%= form.text_field :title %>
+  <div class="field">
+    <%= form.label :title, autofocus: true, class: "label" %>
+  <div class="control">
+    <%= form.text_field :title, class: "input" %>
+  </div>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.textarea :description %>
+  <div class="field">
+    <%= form.label :description, class: "label" %>
+  <div class="control">
+    <%= form.textarea :description, class: "textarea" %>
+  </div>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="field">
+  <div class="control">
+    <%= form.submit "Submit", class: "button is-link" %>
+  </div>
   </div>
 <% end %>
