--- a/app/views/diversions/index.html.erb
+++ b/app/views/diversions/index.html.erb
@@ -7,7 +7,9 @@
 
 <div id="diversions">
   <% @diversions.each do |diversion| %>
+  <div class="box diversion">
     <%= render diversion %>
+  </div>
   <% end %>
 </div>
 
