--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 <div id="posts">
   <% @posts.each do |post| %>
-    <div id="<%= dom_id post %>" class="box">
+    <div id="<%= dom_id post %>" class="box post">
       <p>
         <span class="post-title"><%= link_to sanitize(post.title), post %></span>
         <span class="post-author"><%= link_to "u/" + post.user.username, post.user %></span>
